# MaticovaNasobicka

./: CMakeLists.txt  matrix.cpp  matrix.py  readme.md  test.py
tests/input/: test02.txt  test03.txt
tests/output/: test01.txt  test02.txt
